--- a/LuaScriptEngineLib/LuaScriptEngineLib.csproj
+++ b/LuaScriptEngineLib/LuaScriptEngineLib.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NeoLua" Version="1.3.14" />
+    <PackageReference Include="NeoLuaDebug" Version="1.3.14" />
   </ItemGroup>
 
 </Project>
